[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[build_docs]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = hcam_drivers
description = Python module for Hipercam GUI
long_description = Python module for Hipercam GUI
author = Stuart Littlefair
author_email = s.littlefair@shef.ac.uk
license = BSD
url = https://sites.google.com/site/hipercam4/
edit_on_github = True
github_project = StuartLittlefair/hcam_drivers
# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
version = 0.0.dev

[entry_points]
astropy-package-template-example = packagename.example_mod:main
